--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
+APP_BASE_URL=http://192.168.88.166:9005
+VITE_API_URL=http://192.168.88.166:8005
+SMTP_PASSWORD=Qm8z*9-MK!cra{k~@]q6UD[wu$$xX7!8EBZH@UxuC_
+SEND_EMAILS=true
 SMTP_HOST=mail.cargotrack.ro
 SMTP_PORT=587
 SMTP_EMAIL=kudos@cargotrack.ro
-SMTP_PASSWORD=Qm8z*9-MK!cra{k~@]q6UD[wu$xX7!8EBZH@UxuC_
 FROM_EMAIL=kudos@cargotrack.ro
-
-APP_BASE_URL=http://192.168.88.175:9001
