--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ streamlit-aggrid~=1.2.0.post1
 pandas~=2.3.3
 fastapi>=0.100.0
 uvicorn>=0.20.0
+python-jose[cryptography]
+python-multipart
+python-dotenv
