migrate sql3lite to mariadDB

--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ SMTP_HOST=mail.cargotrack.ro
 SMTP_PORT=587
 SMTP_EMAIL=kudos@cargotrack.ro
 FROM_EMAIL=kudos@cargotrack.ro
+
+# MariaDB Configuration
+DB_HOST=mariadb
+DB_NAME=kudos_db
+DB_USER=kudos_user
+DB_PASSWORD=kudos_pass
+DB_ROOT_PASSWORD=root_pass
