fix email sending issue

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_BASE_URL=http://192.168.88.175:9005
 VITE_API_URL=http://192.168.88.175:8005
-SMTP_PASSWORD=Qm8z*9-MK!cra{k~@]q6UD[wu$$xX7!8EBZH@UxuC_
+SMTP_PASSWORD=Qm8z*9-MK!cra{k~@]q6UD[wu$xX7!8EBZH@UxuC_
 SEND_EMAILS=true
 SMTP_HOST=mail.cargotrack.ro
 SMTP_PORT=587
