--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     image: mariadb:10.11
     container_name: kudos_db
     restart: unless-stopped
+    ports:
+      - "9006:3306"
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-root_pass}
       MYSQL_DATABASE: ${DB_NAME:-kudos_db}
