--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,18 +31,18 @@ services:
     volumes:
       - kudos_data:/var/lib/mysql
   # Frontend UI Service
-  # frontend:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.frontend
-  #     args:
-  #       - VITE_API_URL=${VITE_API_URL}
-  #   container_name: kudos_frontend
-  #   restart: unless-stopped
-  #   ports:
-  #     - "9005:80"
-  #   depends_on:
-  #     - backend
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+      args:
+        - VITE_API_URL=${VITE_API_URL}
+    container_name: kudos_frontend
+    restart: unless-stopped
+    ports:
+      - "9005:80"
+    depends_on:
+      - backend
 
 volumes:
   kudos_data:
