add 2 new badge

--- a/config.json
+++ b/config.json
@@ -95,6 +95,14 @@
     {
       "label": "🌟 Inspiră prin Exemplu",
       "description": "Creează impact pozitiv și îi inspiră pe ceilalți prin acțiuni concrete."
+    },
+    {
+      "label": "🎓 Împărtășește cunoștințe",
+      "description": "Contribuie activ la dezvoltarea colegilor prin împărtășirea cunoștințelor."
+    },
+    {
+      "label": "⭐ Depășirea așteptărilor",
+      "description": "Contribuie activ la dezvoltarea colegilor prin împărtășirea cunoștințelor."
     }
   ]
 }
