--- a/config.json
+++ b/config.json
@@ -102,7 +102,7 @@
     },
     {
       "label": "⭐ Depășirea așteptărilor",
-      "description": "Contribuie activ la dezvoltarea colegilor prin împărtășirea cunoștințelor."
+      "description": "Demonstrează un nivel de implicare și performanță care depășește constant așteptările stabilite."
     }
   ]
 }
