--- a/config.json
+++ b/config.json
@@ -77,7 +77,7 @@
       "description": "Contribuie activ la colaborarea eficientă și la succesul echipei."
     },
     {
-      "label": "🛠️ Comunicare Transparentă",
+      "label": "🔍 Comunicare Transparentă",
       "description": "Comunică deschis, clar și responsabil."
     },
     {
