--- a/config.json
+++ b/config.json
@@ -101,7 +101,7 @@
       "description": "Creează impact pozitiv și îi inspiră pe ceilalți prin acțiuni concrete."
     },
     {
-      "label": "⭐ Depășirea așteptărilor",
+      "label": "⬆️ Depășirea așteptărilor",
       "description": "Demonstrează un nivel de implicare și performanță care depășește constant așteptările stabilite."
     }
   ]
